Update new chunk ACK rule